--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,26 @@
-# Ignore frontend dependencies and config files
+# Node modules
+node_modules/
 frontend/node_modules/
+backend/node_modules/
+
+# Lock & package files
+/package-lock.json
+/package.json
 frontend/package-lock.json
 frontend/package.json
+backend/package-lock.json
+backend/package.json
 
-# Ignore public folder inside frontend
+# Build and Public folders
 frontend/public/
+frontend/build/
+backend/build/
 
-# Ignore specific files inside frontend/src
+# Specific frontend files
 frontend/src/assets/
 frontend/src/reportWebVitals.js
 frontend/src/setupTests.js
 
-# Ignore backend environment file
+# Environment files
 backend/.env
+frontend/.env
